[package]
name = "gameroom"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15"
serenity = { version="0.11.2", features = ["client", "gateway", "rustls_backend", "model"] }
tokio = { version = "1.13", features = ["macros", "signal","rt-multi-thread"] }